# case-assignment

./: .gitignore  README.md  main.py  pyproject.toml
outbound/: outbound_json.json  outbound_summary.txt
scripts/: pdf_parser.py  pdf_parser_2.py
